client/src/style/leftbar.css
.leftbar {
  height: calc(100vh - 60px);
  top: 60px;
  width: 200px;
  left:0;
  position: sticky;
}

.leftbarWrapper {
  padding: 20px;
}

.leftbarList {
  padding: 0;
  margin: 0;
  list-style: none;
}

.leftbarListItem {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  cursor: pointer;
}

.leftbarListItemText{
  font-size: large;
  color:darkgreen;
  font-weight: 500;
}

.leftbarIcon {
  color: darkgreen;
  margin-right: 15px;
}


@media screen and (max-width: 480px) {

  .leftbar {
    height: auto;
    top:0;
    bottom:0;
    position: relative;
    justify-content: center;
  }

  .leftbarListItem {

    margin-bottom: 10px;
  }
}

